Add ASCIITable and Setting xml file
1. Show ASCII Table
2. Create Config xml file

--- a/src/ProgCalc/Properties/Resources.resx
+++ b/src/ProgCalc/Properties/Resources.resx
@@ -145,4 +145,10 @@
   <data name="strCancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="strConfigFileName" xml:space="preserve">
+    <value>progcalc_config.xml</value>
+  </data>
+  <data name="strXmlCustomResultNodeName" xml:space="preserve">
+    <value>CustomResult</value>
+  </data>
 </root>
