--- a/src/ProgCalc/FormFavExp.resx
+++ b/src/ProgCalc/FormFavExp.resx
@@ -117,44 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="strAuthor" xml:space="preserve">
-    <value>yyscamper</value>
-  </data>
-  <data name="strAppName" xml:space="preserve">
-    <value>ProgCalc</value>
-  </data>
-  <data name="strCancel" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="strAddVarResultErrorMessage" xml:space="preserve">
-    <value>The result is not valid!</value>
-  </data>
-  <data name="strAddToClipboard" xml:space="preserve">
-    <value>Add To Clipboard</value>
-  </data>
-  <data name="strXmlCustomResultNodeName" xml:space="preserve">
-    <value>CustomResult</value>
-  </data>
-  <data name="strConfigFileName" xml:space="preserve">
-    <value>progcalc_config.xml</value>
-  </data>
-  <data name="strAddToVarList" xml:space="preserve">
-    <value>Add To Variable List</value>
-  </data>
-  <data name="strAuthorEmail" xml:space="preserve">
-    <value>yyscamper@163.com</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="imgAddToVarList" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\menu\add_var.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imgAddToClipboard" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\menu\clipboard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="add_fav" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\add_fav.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="strXmlFavExpNodeName" xml:space="preserve">
-    <value>FavoriateExpression</value>
-  </data>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
