(1) New Feature: Manage Favorite Expression. (2) New Feature: Manage Variable (3) Support select integer bits. (4) Add variable to config file. (5) New function support: ChecksumU8, ChecksumU16, Byte, SByte, UINT8, INT9, UINT16, INT16, UINT32, INT32, UINT64, INT64.

--- a/src/ProgCalc/Properties/Resources.resx
+++ b/src/ProgCalc/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="strXmlFavExpNodeName" xml:space="preserve">
     <value>FavoriateExpression</value>
   </data>
+  <data name="strXmlVarNodeName" xml:space="preserve">
+    <value>Variables</value>
+  </data>
 </root>
