--- a/src/ProgCalc/ProgCalc.resx
+++ b/src/ProgCalc/ProgCalc.resx
@@ -178,6 +178,9 @@
   <metadata name="ctxMenuFnList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>556, 17</value>
   </metadata>
+  <metadata name="ctxMenuGroupBinBox.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>135, 56</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAgAgIAAAAEAIAAoCAEAhgAAAGBgAAABACAAqJQAANYQAgBISAAAAQAgAIhUAAAmOgMAQEAAAAEA
